improve my solution